# abstracting-fastapi-services

./: .flake8  .gitignore  pyproject.toml  pytest.ini
app/: main.py
app/config/: database.py  settings.py
app/core/settings/: app.py  development.py  test.py
app/exceptions/: app.py  foo.py  get_list_of_app_exceptions_for_frontend.py  request.py
app/routers/: foo.py
app/services/: foo.py  main.py
